updated stack implementation to use sequenced collection